fix(vmas): basic execution worked , working on spark , json4s issue